# packybara-rest

./: Cargo.toml  README.md
etc/: packybara_rest_preferences.yaml
src/: client_proxy.rs  database.rs  errors.rs  lib.rs  main.rs  prefs.rs  route_desc.rs
src/crud/: distributions.rs  levels.rs  mod.rs  packages.rs  packages_xml.rs  pins.rs  pkgcoords.rs  platforms.rs  roles.rs  root.rs  sites.rs  versionpin.rs  versionpin_withs.rs  versionpins.rs  withs.rs
src/find/: versionpin.rs
