[package]
name = "packybara-rest"
version = "0.1.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
rocket_contrib = "0.4.3"
packybara = {git= "https://github.com/jlgerber/packybara", tag="v0.44.0"}
serde = { version = "1.0.104", features = ["derive"] }
log = "0.4.8"
serde_json = "1.0.48"
